--- a/index.html
+++ b/index.html
@@ -328,11 +328,10 @@
        <div id="contact" style="margin-top:72px;">
 
           <h1>CONTACT ME</h1>
-          <h5>Contact Me</h5>
 
           <div class="message">
              <p>連絡の際はgmailの方へお願いします。</p>
-             <p>現時点では右下のフォームはHTML/CSSで作成しておりますが、近々WordPressのContact Form 7というプラグインを使用したフォームに差し替える可能性があります、</p>
+             <p>現時点では右下のフォームはHTML/CSSで作成しておりますが、近々WordPressのContact Form 7というプラグインを使用したフォームに差し替える可能性があります。</p>
           </div>
 
     <div class="formblock">
