--- a/index.html
+++ b/index.html
@@ -203,12 +203,12 @@
         <div class="flavors">
          <a href="http://kittokobe.starfree.jp/manaby_LP/manaby-lp.html">
           <img src="./imgs/guilherme-petri-PtOfbGkU3uI-unsplash.jpg"></a>
-         <div class="titleblock"><p style="font-size:16px;">美容院<br>ページ</p></div>
+         <div class="titleblock wordpress"><p style="font-size:16px;">美容院<br>ページ</p></div>
        </div>
         <div class="flavors">
          <a href="http://kittokobe.starfree.jp/manaby_LP/manaby-lp.html">
           <img src="./imgs/vadim-sherbakov-d6ebY-faOO0-unsplash.jpg"></a>
-         <div class="titleblock"><p style="font-size:16px;">大学<br>ページ</p></div>
+         <div class="titleblock wordpress"><p style="font-size:16px;">大学<br>ページ</p></div>
        </div>
     </div>
 
