--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 <body class="mainscreen">
     <header>
+        <div class="container">
     <nav>
        <div class="menu-content1">
           <ul class="submenu1">
@@ -25,6 +26,7 @@
           <i class="fas fa-bars"></i>
        </div>
     </nav>
+    </div>
  </header>
  <div id="portfolio">
     <div class="unseen"></div>
