--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
        </div>
     </div>
 
-    <div id="profile">
+<section id="profile">
        <div class="unseen"></div>
     <h1>PROFILE</h1>
        <h3>Oka Yoshiki</h3>
@@ -93,8 +93,9 @@
        割とすぐにパニックになります。</p>
     </div>
    </th>
-      </div>
-     <div id="works" style="margin-top:72px;">
+</section>
+    
+     <section id="works" style="margin-top:72px;">
        <div class="unseen"></div>
      <h1>WORKS</h1>
      <h2>POSTERS</h2>
@@ -213,9 +214,9 @@
           <img src="./imgs/vadim-sherbakov-d6ebY-faOO0-unsplash.jpg"></a>
          <div class="titleblock wordpress"><p style="font-size:16px;">大学<br>ページ</p></div>
        </div>
-    </div>
+    </section>
 
-    <div id="library" style="margin-top:72px;">
+    <section id="library" style="margin-top:72px;">
     <div class="unseen"></div>
        <h1>LIBRARY</h1>
         <h2>PAINTING</h2>
@@ -324,11 +325,11 @@
 
     </div>
  </div>
- </div>
+ </section>
      <!--<i id="left" class="fa-solid fa-angle-left"></i>
        <i id="right" class="fa-solid fa-angle-right"></i>-->
        <div class="unseen"></div>
-       <div id="contact" style="margin-top:72px;">
+       <section id="contact" style="margin-top:72px;">
 
           <h1>CONTACT ME</h1>
 
@@ -378,7 +379,7 @@
 
         </form>
        </div>
-    </div>
+    </section>
 
      <!--<div class="products">
      <h1>商品紹介</h1>
